# nwc-api

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
.sqlx/: query-03c8c391dd5e9cd9291e7463e59d7d565591e8f62722700b920a124f8dda7526.json  query-0db1558f4397b6ff97c20759ee95c7aaaf6616b124b4ee2645664d61188d712c.json  query-7274e1af66f4ceb20ff0ce1a27775d8680f9e624462b9e120465df01364a52fb.json  query-d7f098578ff5dcbb242aac720b7ad38003ee5ca42729c9a1232a271fc2d1f347.json  query-de50979a849859cbb6cf555e22c59a64bfe025ebf52d029c40efdbd49d601e8e.json
migrations/: 0001_create_tables.sql  V1__create_tables.sql
src/: cache.rs  init_db.rs  main.rs  settings.rs
src/models/: mod.rs
src/models/nwc/: customer_nwc.rs  mod.rs
src/views/: mod.rs
src/views/nwc/: handlers.rs
