[package]
name = "nwc-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bitcoin = { version = "0.31.2", features = ["rand", "rand-std"] }
hyper = "1.3.1"
nostr = "0.30.0"
nostr-sdk = "0.30.0"
serde = "1.0.200"
serde_derive = "1.0.200"
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["trace"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
sqlx = { version = "0.7.4",features = ["postgres", "runtime-tokio-rustls", "chrono"]}
dotenv = "0.15.0"

[lints.clippy]
needless_return = "allow"

